--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,9 @@ spring:
     username: sa
     password:
     ddl-auto: create
+
+server:
+  port: 8000
+  compression:
+    enabled: true
+    mime-types: application/json
