update openapi documentation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,5 @@ server:
   compression:
     enabled: true
     mime-types: application/json
+
+# swagger http://localhost:8000/swagger-ui/index.html#/
